RESOLVED FIXED214326
Selection is not always clearing when tapping.
https://bugs.webkit.org/show_bug.cgi?id=214326
Summary Selection is not always clearing when tapping.
Megan Gardner
Reported 2020-07-14 15:40:06 PDT
Selection is not always clearing when tapping.
Attachments
Patch (2.13 KB, patch)
2020-07-14 16:35 PDT, Megan Gardner
no flags
Patch (6.74 KB, patch)
2020-07-16 12:57 PDT, Megan Gardner
no flags
Patch for landing (6.77 KB, patch)
2020-07-16 14:27 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2020-07-14 16:33:43 PDT
Megan Gardner
Comment 2 2020-07-14 16:35:17 PDT
Wenson Hsieh
Comment 3 2020-07-14 16:40:34 PDT
Comment on attachment 404305 [details] Patch Can we remove the `!_page->editorState().selectionIsRange` check too? This is also something we should be able to write a test for.
Megan Gardner
Comment 4 2020-07-14 16:42:57 PDT
We can, but I figured it was a reasonable short-circuit, so I didn't take it out.
Wenson Hsieh
Comment 5 2020-07-14 16:51:20 PDT
(In reply to Megan Gardner from comment #4) > We can, but I figured it was a reasonable short-circuit, so I didn't take it > out. 👍🏻 Sounds reasonable
Megan Gardner
Comment 6 2020-07-16 12:57:21 PDT
Wenson Hsieh
Comment 7 2020-07-16 13:05:37 PDT
Comment on attachment 404476 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=404476&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:2574 > if (!_page->editorState().selectionIsRange) > return NO; > - return [self _pointIsInsideSelectionRect:point outBoundingRect:nil]; > + return YES; Nit - this might be cleaner as just `return _page->editorState().selectionIsRange;` > LayoutTests/editing/selection/ios/hide-selection-after-tap-on-prevent-default-element.html:53 > + //await UIHelper.delayFor(1000); Nit - stray commented out code.
Megan Gardner
Comment 8 2020-07-16 14:27:06 PDT
Created attachment 404484 [details] Patch for landing
EWS
Comment 9 2020-07-16 14:59:38 PDT
Committed r264481: <https://trac.webkit.org/changeset/264481> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404484 [details].
Note You need to log in before you can comment on or make changes to this bug.