Selection is not always clearing when tapping. https://bugs.webkit.org/show_bug.cgi?id=214326 Source/WebKit:

<rdar://problem/65069201>

Reviewed by Wenson Hsieh.

In r262280 we stopped the UIWKGestureOneFingerTap gesture from starting if the tap was not inside
the current selection. That caused the selection to not always be cleared, especially when tapping
on an element that could create an overlay in which the selection was supposed to be obscured. We
short circuited this gesture because it used to cause a sync IPC message to be sent to the web process,
but that code has subsequently changed, so allowing the gesture to start and clear the selection in all
cases is no longer a performance concern, so changing the behavior back to allowing the gesture to always
start, even if the touch is not inside the selection rect.

Test: editing/selection/ios/hide-selection-after-tap-on-prevent-default-element.html

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView textInteractionGesture:shouldBeginAtPoint:]):

LayoutTests:

Reviewed by Wenson Hsieh.

* editing/selection/ios/hide-selection-after-tap-on-prevent-default-element-expected.txt: Added.
* editing/selection/ios/hide-selection-after-tap-on-prevent-default-element.html: Added.
* resources/ui-helper.js:
(window.UIHelper.tapElement):


Canonical link: https://commits.webkit.org/227229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264481 268f45cc-cd09-0410-ab3c-d52691b4dbfc